syntax = "proto3";
package ModificarZF;

service ModificarZFRequestService {
    rpc ModificarZFRequest(Solicitud) returns (RespuestaBroker) {}
}

service ModificarZFEnDNSService {
    rpc ModificarZFEnDNS(Modificacion) returns (RespuestaDNS) {}
}

service VerificarService{
    rpc Verificar(Enviodom) returns (RespuestaDNS) {}
}

message Modificacion {
    string accion = 1;
    string valor_afectado = 2;
    string nuevo_valor = 3;
}

message RespuestaDNS {
    string reloj = 1;
}

message Solicitud {
    string Dominio = 1;
    string Reloj = 2;
}

message RespuestaBroker {
    string IPserver = 1;
}

message Enviodom{
    string Dominio = 1;
}
